--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,10 @@ General
     padding: 0;
 }
 
-html, body {
+html, 
+body {
     width: 100%;
-    height: 100%
+    height: 100%;
 }
 
 body {
@@ -25,10 +26,10 @@ Header
 
 .top {
 	margin-bottom: 20px;
-	border-bottom: 4px solid #BCBBBB;
+	border-bottom: 4px solid #bcbbbb;
 }
 
-.site-header img {
+.logo {
 	margin-top: 1%;
 	float: left;
 	padding-right: 50%
@@ -38,7 +39,6 @@ Header
 	padding-top: 4%;
 	font-size: 40px;
 	text-align: right;
-
 }
 
 .site-header h3 {
@@ -47,20 +47,14 @@ Header
 	text-align: right;
 }
 
-.center {
-    margin: auto;
-    width: 70%;
-    padding: 10px;
-}
-
-.img{
-	width:100%;
-	margin-right:0px;
+.img {
+	width: 100%;
+	margin-right: 0px;
 	margin-top: 20px;
 }
 
 .col-md-10 {
-	padding:0;
+	padding: 0;
 }
 
 /*********************
@@ -71,6 +65,10 @@ Bottom
 	margin-top: 40px;
 }
 
+.paragraph {
+	font-size: 17px;
+}
+
 .image {
 	opacity: 0.7;
 }
@@ -79,9 +77,52 @@ Bottom
 	opacity: 1.0;
 }
 
+/*********************
+Media Queries
+*********************/
 
+@media screen and (max-width: 1060px) {
+	.image {
+		width: 250px;
+		height: 250px;
+	}
+}
 
+@media screen and (max-width: 720px) {
+	.image {
+		width: 200px;
+		height: 200px;
+	}
 
+	.bottom h1 {
+		text-align: center;
+		margin-bottom: 40px;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	.site-header h1 {
+		padding-top: 4%;
+		font-size: 40px;
+		text-align: center;
+	}
+
+	.site-header h3 {
+		padding-bottom: 5%;
+		font-size: 25px;
+		text-align: center;
+	}
+
+	.bottom h1 {
+		text-align: center;
+		margin-bottom: 40px;
+	}
+
+	.logo {
+		margin-left: 33%;
+		margin-bottom: 30px;
+	}
+}
 
 
 
