--- a/css/main.css
+++ b/css/main.css
@@ -5,19 +5,19 @@ General
 @import url(http://fonts.googleapis.com/css?family=Lato:400,300|Raleway);
 
 * {
-margin: 0;
-padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 html, 
 body {
-width: 100%;
-height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 body {
-font-family: "Raleway", sans-serif;
-font-weight: 300;
+	font-family: "Raleway", sans-serif;
+	font-weight: 300;
 }
 
 /*********************
@@ -118,7 +118,7 @@ Media Queries
 	}
 
 	.logo {
-		margin: 0 33% 30px 0;
+		margin: 0 0 5% 33%;
 	}
 }
 
