--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ General
 	padding: 0;
 }
 
-html, 
+html,
 body {
 	width: 100%;
 	height: 100%;
@@ -93,9 +93,32 @@ Media Queries
 		height: 200px;
 	}
 
-	.bottom-h1 {
+	.bottom-h2 {
 		text-align: center;
 		margin-bottom: 40px;
+	}
+}
+
+@media screen and (max-width: 665px) {
+	.site-header-h1 {
+		padding-top: 4%;
+		font-size: 40px;
+		text-align: center;
+	}
+
+	.site-header-h3 {
+		padding-bottom: 5%;
+		font-size: 25px;
+		text-align: center;
+	}
+
+	.bottom-h2 {
+		text-align: center;
+		margin-bottom: 40px;
+	}
+
+	.logo {
+		margin: 0 0 5% 37%;
 	}
 }
 
@@ -112,7 +135,7 @@ Media Queries
 		text-align: center;
 	}
 
-	.bottom-h1 {
+	.bottom-h2 {
 		text-align: center;
 		margin-bottom: 40px;
 	}
